# vcr-langchain

./: .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: lint.yml  test.yml
tests/: __init__.py  custom.yaml  dummy.py  playwright-async.yaml  playwright-sync.yaml  test_chat.py  test_chatgpt.yaml  test_embeddings.py  test_matchers.py  test_openai_embeddings.yaml  test_tools.py  test_usage.py  test_use_as_test_decorator.yaml  test_use_bash.yaml  test_use_bash_multiple_commands.yaml  test_use_bash_same_commands.yaml  test_use_serp_api.yaml  test_use_serp_api_without_keyword.yaml
vcr_langchain/: __init__.py  bash_patch.py  cache.py  cassette.py  config.py  dummy.py  generic.py  matchers.py  patch.py  record_mode.py  request.py  stubs.py
