[tool.poetry]
name = "vcr-langchain"
version = "0.0.31"
description = "Record and replay LLM interactions for langchain"
authors = ["Amos Jun-yeung Ng <me@amos.ng>"]
readme = "README.md"
packages = [{include = "vcr_langchain"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
vcrpy = "^4.3.1"
langchain = "^0.1.0"
gorilla = "^0.4.0"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.10"
# use pydantic v2 to avoid the error in bash_patch.py:
#     RuntimeError: no validator found for <class 're.Pattern'>, see
#     `arbitrary_types_allowed` in Config
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
google-search-results = "^2.4.1"
faiss-cpu = "^1.7.3"
pre-commit = "^3.1.1"
autoflake = "^2.0.1"
pytest-asyncio = "^0.21.0"
playwright = "^1.34.0"
nest-asyncio = "^1.5.6"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
pexpect = "^4.8.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "network: marks tests as requiring network services",
]
filterwarnings = [
    "error",
    'ignore:distutils Version classes are deprecated:DeprecationWarning',
    'ignore:unclosed <ssl.SSLSocket:ResourceWarning',
    'ignore::sqlalchemy.exc.MovedIn20Warning',
    'ignore::pydantic.warnings.PydanticDeprecatedSince20'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"